# AgentAudit

./: .codespace-test.md  .gitignore  CLAUDE.md  LICENSE  PITCH.md  PUSH_INSTRUCTIONS.md  README.md  foundry.toml  hardhat.config.js  index (1).html  index.html  jest.config.ts  package-lock.json  package.json  tsconfig.json
cache/: solidity-files-cache.json
contracts/: AuditVault.sol
deployments/: phase7-arbitrumOne.json  phase7-base.json  phase7-mantle.json  phase7-optimism.json  phase7-polygon.json
docs/: AUDIT_ARCHITECTURE.md  CNAME  COMPLIANCE_MAPPING.md  KYA_STANDARD.md  MIGRATION_PLAN.md  THREAT_MODEL.md  dashboard.html  index.html  payload-best-practices.md
mcp-server/: mcp-server.ts  package-lock.json  package.json  tsconfig.json
plugin-elizaos/: index.js  package-lock.json  package.json  test.js
python-sdk/: README.md  pyproject.toml
python-sdk/agentauditai/: __init__.py  client.py  models.py
python-sdk/agentauditai_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: deploy.js  deploy_phase7.ts  deploy_v2.sh  tsconfig.json
sdk/: README.md  package.json
src/: mcp-server.ts
test/: AIBOMRegistry.t.sol  AccuracyRobustnessRegistry.t.sol  AgentAuditBatch.t.sol  AgentIdentityRegistry.t.sol  AgentRegistration.t.sol  AuditVault.t.sol  ConformityAssessment.t.sol  DataGovernanceRegistry.t.sol  DecisionProvenance.t.sol  EUAIActReporter.t.sol  GPAIModelRegistry.t.sol  HumanOversightRegistry.t.sol  IncidentRegistry.t.sol  MultiAgentAuditChain.t.sol  PostMarketMonitor.t.sol  QualityManagementSystem.t.sol  ReputationRegistry.t.sol  (+5 more)
(+40 files in other folders)
